--- a/src/app/create-network-switching/create-network-switching.component.html
+++ b/src/app/create-network-switching/create-network-switching.component.html
@@ -17,13 +17,21 @@
                 <input class="form-control networkswitch-value" [(ngModel)]="nwsw.id" placeholder="id" name="id" id="id" type="text" />
               </div>
               <div class="form-group">
+                <label class="networkswitch-label" for="destination-zone">System:</label>
+                <select class="form-control" [(ngModel)]="nwsw.systemEnvironment"  id="systemEnvironment" name="systemEnvironment">
+                  <option *ngFor="let systemEnvironment of SYSTEM_ENVIRONMENTS">
+                    {{systemEnvironment}}
+                  </option>
+                </select>
+              </div>
+              <div class="form-group">
                 <label class="networkswitch-label" for="protocol" >protocol</label>
                 <input class="form-control networkswitch-value" [(ngModel)]="nwsw.protocol" name="protocol" id="protocol" placeholder="protocol" />
               </div>
               <div class="form-group">
                 <label class="networkswitch-label" for="destination-zone">state</label>
                 <select class="form-control" [(ngModel)]="nwsw.state"  id="state" name="state">
-                  <option *ngFor="let state of states">
+                  <option *ngFor="let state of STATES">
                     {{state}}
                   </option>
                 </select>
@@ -66,7 +74,7 @@
               <div class="form-group">
                 <label class="networkswitch-label" for="source-zone">Zone</label>
                 <select class="form-control" [(ngModel)]="nwsw.destination.zone"  id="source-zone" name="source-zone">
-                  <option *ngFor="let zone of zones">
+                  <option *ngFor="let zone of ZONES">
                     {{zone}}
                   </option>
                 </select>
@@ -106,7 +114,7 @@
                 <label class="networkswitch-label" for="destination-zone">Zone</label>
                 <div class="form-group">
                   <select class="form-control" [(ngModel)]="nwsw.destination.zone" name="destination-zone" id="destination-zone">
-                    <option *ngFor="let zone of zones">
+                    <option *ngFor="let zone of ZONES">
                       {{zone}}
                     </option>
                   </select>
