--- a/src/app/edit-network-switching/edit-network-switching.component.scss
+++ b/src/app/edit-network-switching/edit-network-switching.component.scss
@@ -35,3 +35,16 @@
 .glyphicon-flash {
   color: red;
 }
+
+.development_system {
+  background-color: $system-development-color;
+}
+.test_system {
+  background-color: $system-test-color;
+}
+.integration_system {
+  background-color: $system-integration-color;
+}
+.production_system {
+  background-color: $system-production-color;
+}
