- ConfirmDialog when edit/create network switching - all libraries actualized (got necessary due to ng2-bootstrap-modal!) - some smaller fixes

--- a/src/app/edit-network-switching/edit-network-switching.component.html
+++ b/src/app/edit-network-switching/edit-network-switching.component.html
@@ -149,6 +149,8 @@
 
 
 <!-- Modal dialogs -->
+
+<!-- Add Test Result -->
 <div class="modal fade" tabindex="-1" role="dialog" id="addTestresultModal">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -183,7 +185,7 @@
   </div>
 </div>
 
-
+<!-- Show Historic Data -->
 <div class="modal fade" tabindex="-1" role="dialog" id="showHistoricData" *ngIf="nwsw">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
