--- a/src/app/edit-network-switching/edit-network-switching.component.html
+++ b/src/app/edit-network-switching/edit-network-switching.component.html
@@ -87,7 +87,7 @@
               <h2>Host Settings</h2>
               <div class="form-group">
                 <label class="networkswitch-label" for="source-host">Host</label>
-                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.source.host" #sourceHost="ngModel" name="source-host" id="source-host" required="{{!sourceIpAddr.valid}}" placeholder="Host" pattern="^(([a-zA-Z0-9]|[a-zA-Z0-9][a-zA-Z0-9\-]*[a-zA-Z0-9])\.)*([A-Za-z0-9]|[A-Za-z0-9][A-Za-z0-9\-]*[A-Za-z0-9])$" />
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.source.host" #sourceHost="ngModel" name="source-host" id="source-host" required="{{!sourceIpAddr.valid}}" placeholder="Host" pattern="{{hostRegEx}}" />
               </div>
               <div class="form-group">
                 <label class="networkswitch-label" for="source-group">Gruppe</label>
@@ -95,7 +95,7 @@
               </div>
               <div class="form-group">
                 <label class="networkswitch-label" for="source-ipAddr">Ip Adresse</label>
-                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.source.ipAddr" #sourceIpAddr="ngModel" name="source-ipAddr" id="source-ipAddr" required="{{!sourceHost.valid}}" placeholder="Ip Adresse" pattern="^[0-9.-]+$" />
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.source.ipAddr" #sourceIpAddr="ngModel" name="source-ipAddr" id="source-ipAddr" required="{{!sourceHost.valid}}" placeholder="Ip Adresse" pattern="{{ipRegEx}}" />
               </div>
               <div class="form-group">
                 <label class="networkswitch-label" for="source-port">Port</label>
@@ -114,7 +114,7 @@
               <h2>Destination Settings</h2>
               <div class="form-group">
                 <label class="networkswitch-label" for="destination-host">Host</label>
-                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.destination.host" #destinationHost="ngModel" name="destination-host" id="destination-host" placeholder="Host" required="{{!destinationIpAddr.valid}}" pattern="^(([a-zA-Z0-9]|[a-zA-Z0-9][a-zA-Z0-9\-]*[a-zA-Z0-9])\.)*([A-Za-z0-9]|[A-Za-z0-9][A-Za-z0-9\-]*[A-Za-z0-9])$" />
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.destination.host" #destinationHost="ngModel" name="destination-host" id="destination-host" placeholder="Host" required="{{!destinationIpAddr.valid}}" pattern="{{hostRegEx}}" />
               </div>
               <div class="form-group">
                 <label class="networkswitch-label" for="destination-group">Gruppe</label>
@@ -122,7 +122,7 @@
               </div>
               <div class="form-group">
                 <label class="networkswitch-label" for="destination-ipAddr">Ip Adresse</label>
-                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.destination.ipAddr" #destinationIpAddr="ngModel" required="{{!destinationHost.valid}}"  name="destination-ipAddr" id="destination-ipAddr" placeholder="Ip Adresse" pattern="^[0-9.-]+$" />
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.destination.ipAddr" #destinationIpAddr="ngModel" required="{{!destinationHost.valid}}" name="destination-ipAddr" id="destination-ipAddr" placeholder="Ip Adresse" pattern="{{ipRegEx}}" />
               </div>
               <div class="form-group">
                 <label class="networkswitch-label" for="destination-port">Port</label>
@@ -142,7 +142,7 @@
       </div>
     </div>
     <button class="btn btn-default" type="button" (click)="goBack()">Back</button>
-    <button class="btn btn-success" type="submit" [disabled]="!editForm.valid" (click)="save(true)">Save</button>
+    <button class="btn btn-success" type="submit" [disabled]="(!sourceIpAddr.valid && !sourceHost.valid) || (!destinationHost.valid && !destinationIpAddr.valid)" (click)="save(true)">Save</button>
     <button class="btn btn-danger" type="button" (click)="delete()">Delete</button>
   </form>
 </div>
