- ConfirmDialog when deleting a network-switching - ng2-logger introduced - libraries updated (again; got problem when creating /dist) - new TestStatusComponent (used at several places)

--- a/src/app/test-status/test-status.component.scss
+++ b/src/app/test-status/test-status.component.scss
@@ -1,3 +1,14 @@
 @import "../css-imports/_mixinsAndFunctions";
 @import "../css-imports/_variables";
 @import "../css-imports/_form";
+
+
+// additional style:
+.glyphicon-ok {
+  color: green;
+}
+
+// additional style:
+.glyphicon-flash {
+  color: red;
+}
