--- a/src/app/edit-network-switching/edit-network-switching.component.html
+++ b/src/app/edit-network-switching/edit-network-switching.component.html
@@ -48,6 +48,13 @@
             </div>
             <div class="networkswitch-part">
               <div>
+                <label class="networkswitch-label" for="lastTestResult">Last Testresult:</label>
+                <div id="lastTestResult">
+                  <test-status [result]="nwsw.getLastTeststateResult()"></test-status>
+                  ({{nwsw.getLastTeststateTimestamp() | date:DATE_FORMAT}})
+                </div>
+              </div>
+              <div>
                 <label class="networkswitch-label" for="addTestresultBtn">Enter Testresult:</label>
                 <button type="button"
                         class="btn"
@@ -103,7 +110,7 @@
               </div>
               <div class="form-group">
                 <label class="networkswitch-label" for="source-zone">Zone</label>
-                <select class="form-control" [(ngModel)]="nwsw.destination.zone"  id="source-zone" name="source-zone">
+                <select class="form-control" [(ngModel)]="nwsw.source.zone"  id="source-zone" name="source-zone">
                   <option *ngFor="let zone of ZONES">
                     {{zone}}
                   </option>
@@ -143,7 +150,7 @@
     </div>
     <button class="btn btn-default" type="button" (click)="goBack()">Back</button>
     <button class="btn btn-success" type="submit" [disabled]="!editForm.valid" (click)="save(true)">Save</button>
-    <button class="btn btn-danger" type="button" (click)="delete()">Delete</button>
+    <button class="btn btn-danger" type="button" (click)="delete()">Delete...</button>
   </form>
 </div>
 
@@ -216,14 +223,7 @@
         <table class="table table-striped">
           <tr *ngFor="let testresult of nwsw.testresultList">
             <td>
-              <span class="glyphicon glyphicon-ok"
-                    aria-hidden="true"
-                    title="OK"
-                    *ngIf="testresult.result"></span>
-              <span class="glyphicon glyphicon-flash"
-                    aria-hidden="true"
-                    title="OK"
-                    *ngIf="!testresult.result"></span>
+              <test-status [result]="testresult.result"></test-status>
             </td>
             <td>{{testresult.timestamp | date:DATE_FORMAT}}</td>
           </tr>
