--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -16,7 +16,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><p class="navbar-text user-email">{{getUserIdString()}}</p></li>
+        <li><p class="navbar-text user-email" id="user-email">{{getUserIdString()}}</p></li>
         <li><p class="navbar-text user-role">{{getRoleString()}}</p></li>
         <li>
           <button type="button"
@@ -38,7 +38,7 @@
         </li>
         <li>
           <button type="button"
-                  class="btn btn-default navbar-btn"
+                  class="btn btn-default navbar-btn log-out"
                   (click)="logout()"
                   [disabled]="!isLoggedIn()">
             <span class="glyphicon glyphicon-log-out"
