--- a/src/app/create-network-switching/create-network-switching.component.html
+++ b/src/app/create-network-switching/create-network-switching.component.html
@@ -78,7 +78,7 @@
               </div>
               <div class="form-group">
                 <label class="networkswitch-label" for="source-zone">Zone</label>
-                <select class="form-control" [(ngModel)]="nwsw.destination.zone"  id="source-zone" name="source-zone">
+                <select class="form-control" [(ngModel)]="nwsw.source.zone"  id="source-zone" name="source-zone">
                   <option *ngFor="let zone of ZONES">
                     {{zone}}
                   </option>
