- fixing sending email twice: 2x subscribe -> sent doubled(?) - unused buttons on UserManagementComponent removed - readme updated

--- a/src/app/user-management/user-management.component.html
+++ b/src/app/user-management/user-management.component.html
@@ -58,15 +58,15 @@
     Sign Up
   </button>
 
-  <button type="button"
+<!--  <button type="button"
           class="btn"
           (click)="updateUser()">
     Password forgotten (TODO Delete?)
-  </button> <!-- TODO Move somewhere else -->
+  </button> &lt;!&ndash; TODO Move somewhere else &ndash;&gt;
 
   <button type="button"
           class="btn"
           (click)="updateUser()">
     Change Password (TODO Delete?)
-  </button>
+  </button> -->
 </form>
