added text when you have no nwsw added some test but e2e fails because of the protractor fixed unit tests added boxshadow instead of border

--- a/src/app/css-imports/_variables.scss
+++ b/src/app/css-imports/_variables.scss
@@ -1,12 +1,10 @@
-@import "_mixinsAndFunctions";
-
 $gray: #eee;
 $primary-color: #193e84;
 $primary-color-dark: #051861;
-$border-radius: prem(4);
+$border-radius: 0.4rem;
 $default-transition: 0.3s;
 
-$default-space: prem(15);
+$default-space: 1.5rem;
 
 $base-font-size: 16px;
 
