--- a/src/app/css-imports/_form.scss
+++ b/src/app/css-imports/_form.scss
@@ -8,8 +8,8 @@
 
 .networkswitch-part {
   width: 50%;
-  padding-left: prem(20);
-  padding-right: prem(20);
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .development_system {
@@ -30,7 +30,7 @@
 }
 
 .accordion-toggle {
-  padding: prem(10) prem(15);
+  padding: 1rem 1.5rem;
   // color taken from Bootstrap's .panel-default>.panel:
   border-left: 5px solid #f5f5f5;
   display: block;
