--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,5 +1,4 @@
 @import "../css-imports/_variables";
-@import "../css-imports/_mixinsAndFunctions";
 
 
 .tab-content {
@@ -7,7 +6,7 @@
 }
 
 .logo {
-  max-height: prem(100);
+  max-height: 10rem;
   width: auto;
 }
 
@@ -25,15 +24,19 @@
   padding-left: calc(50vw - 50%);
   padding-right: calc(50vw - 50%);
   //background: linear-gradient(to top ,$primary-color, $primary-color-dark);
-  border-radius: 0px;
+  border-radius: 0;
 
-  li + li {
-    margin-left: prem(15);
+  li {
+    margin-right: 1.5rem;
+
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
 
 .icon {
-  max-height: prem(50);
+  max-height: 5rem;
   width: auto;
 }
 
