--- a/src/app/user-management/user-management.component.html
+++ b/src/app/user-management/user-management.component.html
@@ -39,7 +39,7 @@
   </div>
 
   <button type="submit"
-          class="btn btn-default submit"
+          class="btn btn-default submit login-button"
           (click)="login()"
           [disabled]="isLoggedIn() || !loginForm.form.valid">
     Login
