--- a/src/app/network-switchings-browser/network-switchings-browser.component.scss
+++ b/src/app/network-switchings-browser/network-switchings-browser.component.scss
@@ -66,6 +66,12 @@ sort-button {
   padding-bottom: 0.5rem;
 }
 
+.main-network-part-title {
+  font-size: 18px;
+  font-weight: bold;
+  background: #bbb;
+}
+
 .networkswitchings-header {
   display: flex;
   justify-content: space-between;
